# zed-android-port

./: .gitattributes  .gitignore  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  UPSTREAM_MERGE.md  rust-toolchain.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml  config.yml
crates/gpui_android/: Cargo.toml
crates/gpui_android/docs/: phase-l10-remote-development-scope.md
crates/gpui_android/docs/workarounds/: README.md  activate-extra-activity-move-to-front.md  activity-launch-cold-timeout.md  activity-options-launch-bounds.md  activity-recreation-idempotency.md  android-cfg-gates.md  android-noexec-mount.md  android16-app-category-productivity.md  android16-config-changes-resize.md  apt-dpkg-pin.md  apt-hooks.md  assetsource-icons.md  choreographer-vsync.md  claude-bun-binary-patchelf.md  construct-buffer-inside-open-window.md  debug-strip-oversized-so.md  deferred-bun-resolv-resilience.md  deferred-ld-preload-shim.md  deferred-musl-subprocess-ld-preload.md  deferred-phone-form-factor-polish.md  deferred-render-pipeline-perf.md  deferred-soft-keyboard.md  deferred-tier2-root-storage.md  document-launch-mode-implies-flags.md  dpkg-path-rewrite-patches.md  dpkg-protect-libcxx.md  extra-window-input-parity.md  first-mouse-tagging.md  force-paint-after-surface-attach.md  futures-oneshot-tryrecv-semantics.md  gitconfig-safe-directory.md  hex-patch-resolv-conf.md  home-env-dual-pointing.md  jni-classloader-for-app-classes.md  jni-dns-bridge.md  jni-exception-clear-after-error.md  jvm-clipboard-stack-overflow.md  load-default-linux-keymap.md  load-themes-all.md  miui-aggressive-task-killing.md  (+35 more)
crates/gpui_android/examples/gpui_smoke/: Cargo.toml
crates/gpui_android/examples/gpui_smoke/android/: settings.gradle.kts
crates/gpui_android/examples/gpui_smoke/android/app/: build.gradle.kts
crates/gpui_android/examples/gpui_smoke/android/app/src/main/: AndroidManifest.xml
crates/gpui_android/examples/gpui_smoke/android/app/src/main/kotlin/dev/zed/gpui_smoke/: MainActivity.kt
crates/gpui_android/examples/gpui_smoke/src/: lib.rs
crates/gpui_android/examples/hello_android/: Cargo.toml
crates/gpui_android/examples/hello_android/android/app/: build.gradle.kts
crates/gpui_android/examples/hello_android/android/app/src/main/: AndroidManifest.xml
crates/gpui_android/examples/hello_android/android/app/src/main/kotlin/dev/zed/hello_android/: MainActivity.kt
crates/gpui_android/examples/hello_android/src/: lib.rs
crates/gpui_android/examples/zed_android/: .gitignore  Cargo.toml  README.md  build.rs
crates/gpui_android/examples/zed_android/.cargo/: config.toml
crates/gpui_android/examples/zed_android/android/: settings.gradle.kts
crates/gpui_android/examples/zed_android/android/app/: build.gradle.kts
crates/gpui_android/examples/zed_android/android/app/src/main/: AndroidManifest.xml
crates/gpui_android/examples/zed_android/android/app/src/main/assets/: ld-musl-aarch64.so.1  zed-askpass-helper
crates/gpui_android/examples/zed_android/android/app/src/main/kotlin/com/zdroid/: CursorDrawable.kt  CursorOverlayView.kt  CursorSurfaceControl.kt  ExtraKeysView.kt  ExtraWindowActivity.kt  ImeHost.kt  ImeHostView.kt  ImeInputMode.kt  ImeTextState.kt  InputModality.kt  MainActivity.kt  MotionEventExt.kt  NativeBridge.kt  ZdroidInputConnection.kt  ZedApplication.kt  ZedDocumentsProvider.kt
crates/gpui_android/examples/zed_android/android/app/src/main/kotlin/dev/zed/zed_android/: ExtraWindowActivity.kt  MainActivity.kt  NativeBridge.kt  ZedApplication.kt
crates/gpui_android/examples/zed_android/android/app/src/main/res/animator/: splash_halo_pulse.xml  splash_mid_ring_rotate.xml  splash_orb_pulse.xml  splash_outer_rings_rotate.xml
crates/gpui_android/examples/zed_android/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  splash.xml  splash_icon_animated.xml  splash_icon_vector.xml
crates/gpui_android/examples/zed_android/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
crates/gpui_android/examples/zed_android/android/app/src/main/res/values/: colors.xml  themes.xml
crates/gpui_android/examples/zed_android/android/app/src/main/res/xml/: updater_file_paths.xml
crates/gpui_android/examples/zed_android/askpass-helper/: Cargo.toml
crates/gpui_android/examples/zed_android/askpass-helper/.cargo/: config.toml
crates/gpui_android/examples/zed_android/askpass-helper/src/: main.rs
crates/gpui_android/examples/zed_android/docs/screenshots/: SHOOTING_LIST.md
crates/gpui_android/examples/zed_android/src/: header.rs  lib.rs  menu_bar.rs  noexec_modal.rs  runtime_picker.rs  title_bar.rs
crates/gpui_android/native/zd-runtime/: 99-zd-runtime  README.md  zd-exec  zd-runtime-hook  zd-runtime-sync  zd-runtime.conf.example
crates/gpui_android/native/zd-spawnd/: .gitignore  Makefile  PROTOCOL.md  QUEUED_RELEASE.md  zd-spawnd.c
crates/gpui_android/native/zd-spawnd/magisk-module/: CHANGELOG.md  README.md  action.sh  chroot-init.sh  customize.sh  module.prop  service.sh  uninstall.sh  update.json
crates/gpui_android/native/zd-spawnd/magisk-module/webroot/: index.html
crates/gpui_android/src/: askpass_install.rs  captured_pointer.rs  clipboard.rs  cursor.rs  dispatcher.rs  display.rs  dns_bridge.rs  events.rs  frame_timing.rs  gpui_android.rs  ime.rs  keyboard.rs  multi_window.rs  platform.rs  saf.rs  splash.rs  storage.rs  termux_bootstrap.rs  touch.rs  updater.rs  window.rs  zd_exec_install.rs
crates/gpui_android/src/events/: click_track.rs  keyboard.rs  mouse.rs  source.rs  touch.rs  trackpad.rs
crates/gpui_android/termux-patches/dpkg/: lib-dpkg-tarfn.c.patch  src-deb-extract.c.patch
crates/onboarding/: Cargo.toml
crates/onboarding/src/: basics_page.rs  onboarding.rs  runtime_global.rs
crates/zdroid_runtime/: Cargo.toml
crates/zdroid_runtime/src/: adapters.rs  config.rs  health.rs  port.rs  setup.rs  zdroid_runtime.rs
crates/zdroid_runtime/src/adapters/: bootstrap.rs  bootstrap_install.rs  chroot.rs  external_termux.rs
(+70 files in other folders)
