[package]
name = "gpui_android"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_android.rs"

[target.'cfg(target_os = "android")'.dependencies]
gpui.workspace = true
gpui_wgpu.workspace = true
android-activity = { version = "0.6", features = ["game-activity"] }
anyhow.workspace = true
jni = "0.21"
calloop = "0.14.3"
futures.workspace = true
libc.workspace = true
log.workspace = true
ndk = { version = "0.9", features = ["nativewindow", "api-level-26"] }
raw-window-handle = "0.6"
serde_json.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }
util.workspace = true
uuid.workspace = true
zip = "2"
