[package]
name = "onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/onboarding.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
client.workspace = true
cloud_api_types.workspace = true
collections.workspace = true
component.workspace = true
db.workspace = true
documented.workspace = true
fs.workspace = true
fuzzy.workspace = true
gpui.workspace = true
menu.workspace = true
notifications.workspace = true
picker.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
telemetry.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
util.workspace = true
vim_mode_setting.workspace = true
workspace.workspace = true
zed_actions.workspace = true
zlog.workspace = true

# Android-only: lets the basics_page render the Zdroid runtime adapter
# picker inline (as a section alongside Theme / Base Keymap) instead of
# requiring an out-of-band modal. zdroid_runtime gives us RuntimeId +
# RuntimeFile for reading/writing the active-adapter selection.
[target.'cfg(target_os = "android")'.dependencies]
zdroid_runtime = { path = "../zdroid_runtime" }

[dev-dependencies]
db = {workspace = true, features = ["test-support"]}
