[package]
name = "onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/onboarding.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
client.workspace = true
cloud_api_types.workspace = true
collections.workspace = true
component.workspace = true
db.workspace = true
documented.workspace = true
fs.workspace = true
fuzzy.workspace = true
gpui.workspace = true
menu.workspace = true
notifications.workspace = true
picker.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
telemetry.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
util.workspace = true
vim_mode_setting.workspace = true
workspace.workspace = true
zed_actions.workspace = true
zlog.workspace = true

# Android-only: onboarding basics_page renders a minimal inline runtime
# adapter picker (ToggleButtonGroup) so the user picks one as part of
# the initial setup form. Reads/writes runtime.toml directly via
# RuntimeFile. The richer detailed view (health badges + install hints)
# lives in `crates/gpui_android/examples/zed_android/src/runtime_picker.rs`
# and is reached from Settings → Android Runtime.
[target.'cfg(target_os = "android")'.dependencies]
zdroid_runtime = { path = "../zdroid_runtime" }

[dev-dependencies]
db = {workspace = true, features = ["test-support"]}
