[workspace]

[package]
name = "gpui_smoke"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.13"
anyhow = "1"
gpui = { path = "../../../gpui" }
gpui_android = { path = "../../" }
log = "0.4"
