[workspace]

[package]
name = "hello_android"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.13"
log = "0.4"
anyhow = "1"
glyphon = "0.9"
ndk = "0.9"
pollster = "0.4"
raw-window-handle = "0.6"
wgpu = "25"
