[workspace]

[package]
name = "zed_android"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.13"
anyhow = "1"
jni = "0.21"
rustls-platform-verifier = "0.5.0"
askpass = { path = "../../../askpass" }
assets = { path = "../../../assets" }
client = { path = "../../../client" }
command_palette = { path = "../../../command_palette" }
csv_preview = { path = "../../../csv_preview" }
db = { path = "../../../db" }
diagnostics = { path = "../../../diagnostics" }
editor = { path = "../../../editor" }
encoding_selector = { path = "../../../encoding_selector" }
feedback = { path = "../../../feedback" }
file_finder = { path = "../../../file_finder" }
fs = { path = "../../../fs" }
futures = "0.3"
debug_adapter_extension = { path = "../../../debug_adapter_extension" }
extension = { path = "../../../extension" }
extension_host = { path = "../../../extension_host" }
extensions_ui = { path = "../../../extensions_ui" }
git_graph = { path = "../../../git_graph" }
git_ui = { path = "../../../git_ui" }
language_extension = { path = "../../../language_extension" }
go_to_line = { path = "../../../go_to_line" }
gpui = { path = "../../../gpui" }
gpui_android = { path = "../../" }
gpui_tokio = { path = "../../../gpui_tokio" }
image_viewer = { path = "../../../image_viewer" }
inspector_ui = { path = "../../../inspector_ui" }
json_schema_store = { path = "../../../json_schema_store" }
keymap_editor = { path = "../../../keymap_editor" }
language = { path = "../../../language" }
language_model = { path = "../../../language_model" }
language_selector = { path = "../../../language_selector" }
language_tools = { path = "../../../language_tools" }
languages = { path = "../../../languages", features = ["load-grammars"] }
line_ending_selector = { path = "../../../line_ending_selector" }
markdown_preview = { path = "../../../markdown_preview" }
node_runtime = { path = "../../../node_runtime" }
onboarding = { path = "../../../onboarding" }
outline = { path = "../../../outline" }
outline_panel = { path = "../../../outline_panel" }
log = "0.4"
multi_buffer = { path = "../../../multi_buffer" }
notifications = { path = "../../../notifications" }
paths = { path = "../../../paths" }
project = { path = "../../../project" }
project_panel = { path = "../../../project_panel" }
project_symbols = { path = "../../../project_symbols" }
recent_projects = { path = "../../../recent_projects" }
remote = { path = "../../../remote" }
settings_profile_selector = { path = "../../../settings_profile_selector" }
settings_ui = { path = "../../../settings_ui" }
snippet_provider = { path = "../../../snippet_provider" }
snippets_ui = { path = "../../../snippets_ui" }
svg_preview = { path = "../../../svg_preview" }
tab_switcher = { path = "../../../tab_switcher" }
tasks_ui = { path = "../../../tasks_ui" }
terminal = { path = "../../../terminal" }
terminal_view = { path = "../../../terminal_view" }
theme_selector = { path = "../../../theme_selector" }
toolchain_selector = { path = "../../../toolchain_selector" }
which_key = { path = "../../../which_key" }
shellexpand = "3.1"
util = { path = "../../../util" }
watch = { path = "../../../watch" }
workspace = { path = "../../../workspace" }
zdroid_runtime = { path = "../../../zdroid_runtime" }
platform_title_bar = { path = "../../../platform_title_bar" }
release_channel = { path = "../../../release_channel" }
reqwest_client = { path = "../../../reqwest_client" }
search = { path = "../../../search" }
semver = "1"
session = { path = "../../../session" }
uuid = { version = "1.10", features = ["v4"] }
vim = { path = "../../../vim" }
zed_actions = { path = "../../../zed_actions" }
# Force RustEmbed to bake assets into the binary even in debug builds —
# without this, settings/theme assets are looked up from the host filesystem
# at runtime, which doesn't work on a device.
rust-embed = { version = "8.11", features = ["debug-embed", "include-exclude"] }
settings = { path = "../../../settings" }
theme = { path = "../../../theme" }
theme_extension = { path = "../../../theme_extension" }
theme_settings = { path = "../../../theme_settings" }
ui = { path = "../../../ui" }
menu = { path = "../../../menu" }
auto_update = { path = "../../../auto_update" }

# Debug builds embed unwind/DWARF tables that overflow llvm-strip's ELF
# parser at our binary size (2GB+). Drop debug info on Android — backtraces
# go through `log!` anyway. Keep dev defaults otherwise.
[profile.dev]
debug = "line-tables-only"
strip = "debuginfo"

# Release: workspace already pins `lto = "thin"` + `codegen-units = 1` for
# perf. Override `debug` and `strip` here so the release `.so` ships without
# any debug section at all — the workspace default keeps "limited" debug
# info which inflates the binary by ~40%.
[profile.release]
debug = false
strip = "symbols"
