[package]
name = "zed-askpass-helper"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "zed-askpass-helper"
path = "src/main.rs"

# Standalone — not part of the parent zed_android workspace. Built
# independently via `cargo ndk` so the resulting ELF is a regular
# musl/bionic-linked Android-native binary, NOT a Zygote-launched
# Dalvik instance like the gpui-app's `app_process64` is. This is the
# whole point of the helper existing: SSH_ASKPASS invokes our binary
# from a non-Activity context, and `app_process64` aborts there with
# `Error changing dalvik-cache ownership: Permission denied`.
[workspace]

# Tiny binary — no external deps, just std unix sockets + stdio.
[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
